[package]
name = "sand"
version = "0.1.0"
authors = ["rdavidson <rdavidson@accusoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
crossterm = "0.17.5"
rand = "0.7.3"
num = "0.3.0"
mem = "0.5.0"
lazy_static = "1.4.0"
piston = "0.50.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.64.0"
piston2d-opengl_graphics = "0.72.0"